--- a/src/lib/components/styles.css
+++ b/src/lib/components/styles.css
@@ -19,6 +19,12 @@
     height:100%;
     padding:5% 0;
 }
+.content-container.shadow{
+    box-shadow:0px 0px 5px rgba(0,0,0,0.75);
+}
+.content-container.rounded{
+    border-radius:10px;
+}
 .content{
     transform:skewY(5deg);
     color:white;
@@ -77,4 +83,7 @@
 .content-container.flip.catastrophic,
 .content.catastrophic{
     transform:skewY(10deg);
+}
+.content.tilt{
+    transform:skewY(0deg)
 }
