--- a/src/lib/components/styles.css
+++ b/src/lib/components/styles.css
@@ -1,6 +1,7 @@
 .root{
     width:100%;
     position:relative;
+    z-index:1;
 }
 .root.no-skew{
     padding:75px 0;
@@ -19,9 +20,10 @@
     right:0;
     bottom:0;
     left:0;
-    z-index:25;
+    z-index:1;
     background-color:transparent;
     border-style:solid;
+    pointer-events:none;
 }
 .root .unskewed-border.crop-top{
     border-right:none;
